# SMorph

./: .gitignore  CITATION.cff  README.md  all.ipynb  allautocrop.py  autocrop.ipynb  autocrop.py  autocropGUI.ipynb  autocropShort.ipynb  batch_postprocess.py  batch_preprocess.py  cell_viewer.bat  cell_viewer.py  cell_viewer.sh  group_analysis.ipynb  manualcrop.ipynb  morphanalysis.py  pca demo.ipynb  postprocess.ipynb  pyproject.toml  requirements.txt  sholl analysis.ipynb  sholl.py  single_cell_analysis.ipynb  single_cell_demo.ipynb  view_3D.bat  viewer.ipynb
smorph/: __init__.py
smorph/analysis/: _sholl.py  _skeletal.py  morphometric.py
smorph/core/: _cell.py  _features.py  _groups.py  api.py
smorph/util/: __init__.py  _image.py  _io.py
smorph/util/autocrop/: __init__.py  _io.py  _max_rect_in_poly.py  _postprocessing.py  _preprocess.py  _roi_extract.py  core.py  gui.py  util.py
smorph/util/autocrop/gui/: __init__.py  core.py  tissue_list.py  tree_widget.py  viewer.py
smorph/util/viewer/: __init__.py  core.py
tests/: test_smorph.py
