[tool.poetry]
name = "SMorph"
version = "0.1.1"
description = "A library for rapid analysis of the morphology of cells of the nervous system."
authors = ["Parul Sethi <parul1sethi@gmail.com>", "Kushaan Gupta <gkushaan@rediffmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.0, <3.11"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
networkx = "^2.6.3"
numpy = "1.21.1"
scikit-image = "^0.19.1"
scikit-learn = "^0.23.2"
scipy = "1.6.1"
skan = "^0.10.0"
numba = "0.55.1"
pandas = "1.3.5"
seaborn = "^0.11.2"
ipyvolume = "^0.5.2"
napari = "0.4.14"
tifffile = "2021.11.2"
czifile = "^2019.7.2"
roifile = "2020.11.28"
uuid = "^1.30"
ipympl = "^0.7.0"
psf = "^2021.6.6"
PyQt5 = "^5.15.4"
statannotations = "^0.4.3"
ipyfilechooser = "^0.6.0"
Shapely = "^1.8.0"
magic-class = "^0.6.1"
zarr = "^2.11.0"
magicgui = "^0.3.7"
pathlib2 = "^2.3.7"
aicsimageio = "^4.6.3"
bioformats-jar = "^6.7.0"
aicspylibczi = "^3.0.5"
readlif = "^0.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
