[tool.poetry]
name = "SMorph"
version = "0.1.0"
description = "A library for rapid analysis of the morphology of cells of the nervous system."
authors = ["Parul Sethi <parul1sethi@gmail.com>", "Kushaan Gupta <gkushaan@rediffmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.9"
pip = "21.3.1"
skan = "0.9"
numpy = "1.19.5"
scipy = "1.6.0"
networkx = "^2.6.3"
numba = "0.51.2"
matplotlib = "^3.5.1"
seaborn = "0.11"
pandas = "^1.1.2"
scikit-image = "^0.19.1"
scikit-learn = "^1.0.2"
argon2-cffi = "20.1.0"
jupyter = "^1.0.0"
ipyvolume = "^0.5.2"
urllib3 = "1.26.15"
statannotations = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
