[project]
name = "SMorph"
version = "0.1.1"
description = "A library for rapid analysis of the morphology of cells of the nervous system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aicsimageio>=4.14.0",
    "aicspylibczi>=3.3.1",
    "bioformats-jar>=2020.5.27",
    "czifile>=2019.7.2.1",
    "ipyfilechooser>=0.6.0",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipython-genutils>=0.2.0",
    "ipyvolume>=0.6.3",
    "jupyter>=1.1.1",
    "magic-class>=0.7.15",
    "magicgui>=0.10.0",
    "matplotlib>=3.10.1",
    "napari>=0.5.6",
    "networkx>=3.4.2",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "ome-types>=0.6.1",
    "pandas>=2.2.3",
    "pathlib2>=2.3.7.post1",
    "psf>=2025.1.1",
    "pyqt5>=5.15.11",
    "pywavelets>=1.8.0",
    "readlif>=0.6.5",
    "roifile>=2025.2.20",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.0",
    "skan>=0.12.2",
    "statannotations>=0.7.2",
    "tifffile>=2021.8.30",
    "uuid>=1.30",
    "zarr>=2.15.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["smorph*"]
exclude = ["Results"]
